Ignore user config file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Config files which are meant to be changed by each individual user can be safely ignored by git
+solarity.conf
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
