Update to new Luascript syntax for conky files

--- a/conky_themes/performance-1920x1080/template.conf
+++ b/conky_themes/performance-1920x1080/template.conf
@@ -13,7 +13,7 @@ conky.config = {
 
 	own_window_transparent = true,
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
-	own_window_colour = '#000000',
+	own_window_colour = '000000',
 	own_window_argb_visual = false,
 	own_window_argb_value = 0,
 
