--- a/wallpaper_themes/default/colors.conf
+++ b/wallpaper_themes/default/colors.conf
@@ -1,15 +1,15 @@
 [primary]
-sunrise = #FC6F42
-morning = #5BA276
+sunrise = FC6F42
+morning = 5BA276
 afternoon = ${sunrise}
-sunset = #FEE676
-night = #CACCFD
+sunset = FEE676
+night = CACCFD
 
 [secondary]
-sunrise = #DB4E38
-morning = #76B087
+sunrise = DB4E38
+morning = 76B087
 afternoon = ${sunrise}
-sunset = #9B3A1A
-night = #3F72E8
+sunset = 9B3A1A
+night = 3F72E8
 
 # vim:filetype=dosini
