--- a/conky_themes/time-1920x1080/template.conf
+++ b/conky_themes/time-1920x1080/template.conf
@@ -2,7 +2,7 @@
 
 conky.config = {
 	use_xft = true,
-	font = '${solarity:font:main}',
+	font = '${solarity:fonts:primary}',
 	xftalpha = 0.1,
 	update_interval = 5,
 	total_run_times = 0,
@@ -40,7 +40,7 @@ conky.config = {
 };
 
 conky.text = [[
-    ${voffset 10}${color ${solarity:colors:primary}}${font ${solarity:conky:main-font}:pixelsize=120}${time %H:%M}${font}${font ${solarity:conky:main-font}:pixelsize=15}${voffset -85}${offset 5}${color ${solarity:colors:primary}} ${voffset 10}${color ${solarity:colors:primary}}${font ${solarity:conky:main-font}:pixelsize=22}${time %d}.${time %B} ${time %Y}${color ${solarity:colors:primary}}${font}${voffset 24}${font}${font ${solarity:conky:main-font}:pixelsize=45}${offset -182}${voffset -10}${time %A}${font}
+    ${voffset 10}${color ${solarity:colors:primary}}${font ${solarity:fonts:primary}:pixelsize=120}${time %H:%M}${font}${font ${solarity:fonts:primary}:pixelsize=15}${voffset -85}${offset 5}${color ${solarity:colors:primary}} ${voffset 10}${color ${solarity:colors:primary}}${font ${solarity:fonts:primary}:pixelsize=22}${time %d}.${time %B} ${time %Y}${color ${solarity:colors:primary}}${font}${voffset 24}${font}${font ${solarity:fonts:primary}:pixelsize=45}${offset -182}${voffset -10}${time %A}${font}
 ]];
 
 -- vim:filetype=lua
