Use snake case everywhere including config files
Also abstract config file handling to one single function

--- a/solarity.conf.example
+++ b/solarity.conf.example
@@ -17,14 +17,14 @@ theme = default
 ; --bg-center
 ; --bg-max
 ; --bg-fill
-feh-option = --bg-fill
+feh_option = --bg-fill
 
 [conky]
 ; You might run into issues if you are automatically rearranging displays
 ; at startup, since conky might render its modules to a screen which does
 ; not exist anymore after starting conky. You can prevent this issue by
 ; delaying the start of the conky process
-startup-delay = 0
+startup_delay = 0
 
 ; Available Conky modules can be shown by running `ls conky_themes`
 modules = performance-1920x1080 time-1920x1080
@@ -34,7 +34,7 @@ primary = FuraCode Nerd Font
 
 [behaviour]
 ; How often to check if we have entered a new time of day, in seconds
-refresh-period = 60
+refresh_period = 60
 
 
 ; vim:filetype=dosini
