--- a/wallpaper_themes/default/colors.conf
+++ b/wallpaper_themes/default/colors.conf
@@ -1,11 +1,13 @@
-[primary]
+[1]
+; Primary colors
 sunrise = FC6F42
 morning = 5BA276
 afternoon = ${sunrise}
 sunset = FEE676
 night = CACCFD
 
-[secondary]
+[2]
+; Secondary colors
 sunrise = DB4E38
 morning = 76B087
 afternoon = ${sunrise}
