--- a/conky_themes/performance-1920x1080/template.conf
+++ b/conky_themes/performance-1920x1080/template.conf
@@ -2,7 +2,7 @@
 
 conky.config = {
 	use_xft = true,
-	font = '${solarity:fonts:primary}:size=8',
+	font = '${solarity:fonts:1}:size=8',
 	xftalpha = 0.1,
 	update_interval = 5,
 	total_run_times = 0,
@@ -43,12 +43,12 @@ conky.config = {
 
 conky.text = [[
     ${voffset 115}
-    ${goto 12}${font ${solarity:fonts:primary}:pixelsize=12}${color ${solarity:colors:primary}}CPU${offset 9}${color ${solarity:colors:primary}}${cpu cpu0}%${goto 126}${color ${solarity:colors:primary}}RAM${offset 9}${color ${solarity:colors:primary}}$mem / $memmax${goto 301}${color ${solarity:colors:primary}}HD${offset 9}${color ${solarity:colors:primary}}Avail / Total
-    ${font ${solarity:fonts:primary}:pixelsize=10}${goto 12}${color ${solarity:colors:primary}}01. ${color ${solarity:colors:primary}}${top name 1}${goto 120}${top cpu 1}% / ${top mem_res 1}${goto 301}${font ${solarity:fonts:primary}:pixelsize=10}${color ${solarity:colors:primary}}/${goto 340}${color ${solarity:colors:primary}}${fs_free /} ${goto 400}/ ${fs_size /}
-    ${goto 12}${color ${solarity:colors:primary}}02. ${color ${solarity:colors:primary}}${top name 2}${goto 120}${top cpu 2}% / ${top mem_res 2}${goto 301}${font ${solarity:fonts:primary}:pixelsize=10}${color ${solarity:colors:primary}}/boot${goto 340}${color ${solarity:colors:primary}}${fs_free /boot}${goto 400}/ ${fs_size /boot}
-    ${goto 12}${color ${solarity:colors:primary}}03. ${color ${solarity:colors:primary}}${top name 3}${goto 120}${top cpu 3}% / ${top mem_res 3}${goto 301}${font ${solarity:fonts:primary}:pixelsize=10}${color ${solarity:colors:primary}}/home${goto 340}${color ${solarity:colors:primary}}${fs_free /home}${goto 400}/ ${fs_size /home}
-    ${goto 12}${color ${solarity:colors:primary}}04. ${color ${solarity:colors:primary}}${top name 4}${goto 120}${top cpu 4}% / ${top mem_res 4}
-    ${goto 12}${color ${solarity:colors:primary}}05. ${color ${solarity:colors:primary}}${top name 5}${goto 120}${top cpu 5}% / ${top mem_res 5}
+    ${goto 12}${font ${solarity:fonts:1}:pixelsize=12}${color ${solarity:colors:1}}CPU${offset 9}${color ${solarity:colors:1}}${cpu cpu0}%${goto 126}${color ${solarity:colors:1}}RAM${offset 9}${color ${solarity:colors:1}}$mem / $memmax${goto 301}${color ${solarity:colors:1}}HD${offset 9}${color ${solarity:colors:1}}Avail / Total
+    ${font ${solarity:fonts:1}:pixelsize=10}${goto 12}${color ${solarity:colors:1}}01. ${color ${solarity:colors:1}}${top name 1}${goto 120}${top cpu 1}% / ${top mem_res 1}${goto 301}${font ${solarity:fonts:1}:pixelsize=10}${color ${solarity:colors:1}}/${goto 340}${color ${solarity:colors:1}}${fs_free /} ${goto 400}/ ${fs_size /}
+    ${goto 12}${color ${solarity:colors:1}}02. ${color ${solarity:colors:1}}${top name 2}${goto 120}${top cpu 2}% / ${top mem_res 2}${goto 301}${font ${solarity:fonts:1}:pixelsize=10}${color ${solarity:colors:1}}/boot${goto 340}${color ${solarity:colors:1}}${fs_free /boot}${goto 400}/ ${fs_size /boot}
+    ${goto 12}${color ${solarity:colors:1}}03. ${color ${solarity:colors:1}}${top name 3}${goto 120}${top cpu 3}% / ${top mem_res 3}${goto 301}${font ${solarity:fonts:1}:pixelsize=10}${color ${solarity:colors:1}}/home${goto 340}${color ${solarity:colors:1}}${fs_free /home}${goto 400}/ ${fs_size /home}
+    ${goto 12}${color ${solarity:colors:1}}04. ${color ${solarity:colors:1}}${top name 4}${goto 120}${top cpu 4}% / ${top mem_res 4}
+    ${goto 12}${color ${solarity:colors:1}}05. ${color ${solarity:colors:1}}${top name 5}${goto 120}${top cpu 5}% / ${top mem_res 5}
 ]];
 
 -- vim:filetype=lua
