--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache: pip
 python:
   - 3.6
 install:
-  - pip install -r requirements.txt
+  - pip install -r src/requirements.txt
   - pip install coveralls
 script:
   - cd src
