Fix all type annotations
And use mypy as part of the test suite

--- a/src/requirements.in
+++ b/src/requirements.in
@@ -10,6 +10,9 @@ pytest-freezegun
 # For setting environment variables during testing
 pytest-env
 
+# For running mypy static type analysis as part of pytest with --mypy flag
+pytest-mypy
+
 # For typing
 mypy
 
