--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,6 +16,7 @@ psutil==5.4.3             # via mypy
 py==1.5.2                 # via pytest
 pytest-env==0.6.2
 pytest-freezegun==0.2.0
+pytest-mypy==0.3.0
 pytest==3.3.2
 python-dateutil==2.6.1    # via freezegun
 pytz==2017.3              # via astral
