Use ${ast:*} placeholders instead of ${astrality*}
Also catch variable expansion bugs.

--- a/conky_themes/time-1920x1080/template.conf
+++ b/conky_themes/time-1920x1080/template.conf
@@ -2,7 +2,7 @@
 
 conky.config = {
 	use_xft = true,
-	font = '${astrality:fonts:1}',
+	font = '${ast:fonts:1}',
 	xftalpha = 0.1,
 	update_interval = 5,
 	total_run_times = 0,
@@ -40,7 +40,7 @@ conky.config = {
 };
 
 conky.text = [[
-    ${voffset 10}${color ${astrality:colors:1}}${font ${astrality:fonts:1}:pixelsize=120}${time %H:%M}${font}${font ${astrality:fonts:1}:pixelsize=15}${voffset -85}${offset 5}${color ${astrality:colors:1}} ${voffset 10}${color ${astrality:colors:1}}${font ${astrality:fonts:1}:pixelsize=22}${time %d}.${time %B} ${time %Y}${color ${astrality:colors:1}}${font}${voffset 24}${font}${font ${astrality:fonts:1}:pixelsize=45}${offset -182}${voffset -10}${time %A}${font}
+    ${voffset 10}${color ${ast:colors:1}}${font ${ast:fonts:1}:pixelsize=120}${time %H:%M}${font}${font ${ast:fonts:1}:pixelsize=15}${voffset -85}${offset 5}${color ${ast:colors:1}} ${voffset 10}${color ${ast:colors:1}}${font ${ast:fonts:1}:pixelsize=22}${time %d}.${time %B} ${time %Y}${color ${ast:colors:1}}${font}${voffset 24}${font}${font ${ast:fonts:1}:pixelsize=45}${offset -182}${voffset -10}${time %A}${font}
 ]];
 
 -- vim:filetype=lua
