Preprocess conf file for env variable substitution

--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -1,6 +1,10 @@
 [pytest]
 python_files = test_*.py
 env =
-    EXAMPLE_ENV_VARIABLE=test_value
     ASTRALITY_LOGGING_LEVEL=DEBUG
+    EXAMPLE_ENV_VARIABLE=test_value
+    lower_case_key=lower_case_value
+    UPPER_CASE_KEY=UPPER_CASE_VALUE
+    conflicting_key=value1
+    CONFLICTING_KEY=value2
 addopts = --mypy
