--- a/wallpaper_themes/default/colors.conf
+++ b/wallpaper_themes/default/colors.conf
@@ -1,17 +1,21 @@
-[1]
-; Primary colors
-sunrise = FC6F42
-morning = 5BA276
-afternoon = ${sunrise}
-sunset = FEE676
-night = CACCFD
+[sunrise]
+1 = FC6F42
+2 = DB4E38
 
-[2]
-; Secondary colors
-sunrise = DB4E38
-morning = 76B087
-afternoon = ${sunrise}
-sunset = 9B3A1A
-night = 3F72E8
+[morning]
+1 = 5BA276
+2 = 76B087
+
+[afternoon]
+1 = ${sunrise:1}
+2 = ${sunrise:2}
+
+[sunset]
+2 = 9B3A1A
+1 = FEE676
+
+[night]
+1 = CACCFD
+2 = 3F72E8
 
 # vim:filetype=dosini
