Use ${ENV_NAME} syntax for yaml env expansion

--- a/src/tests/test.conf
+++ b/src/tests/test.conf
@@ -9,7 +9,7 @@ section2:
     empty_string_var: ''
 
 section3:
-    env_variable: ${env:EXAMPLE_ENV_VARIABLE}, hello
+    env_variable: ${EXAMPLE_ENV_VARIABLE}, hello
 
 section4:
     1: primary_value
