--- a/src/tests/test.yaml
+++ b/src/tests/test.yaml
@@ -1,15 +1,15 @@
-[section1]
-var1 = value1
-var2 = ${var1}/value2
+section1:
+    var1: value1
+    var2: value1/value2
 
 
-[section2]
-# Comment
-var3 = ${section1:var1}
-empty_string_var =
+section2:
+    # Comment
+    var3: value1
+    empty_string_var: ''
 
-[section3]
-env_variable = ${env:EXAMPLE_ENV_VARIABLE}, hello
+section3:
+    env_variable: ${EXAMPLE_ENV_VARIABLE}, hello
 
-[section4]
-1 = primary_value
+section4:
+    1: primary_value
