--- a/astrality.yaml.example
+++ b/astrality.yaml.example
@@ -13,15 +13,16 @@ module/wallpaper:
     run_on_period_change: feh --bg-fill wallpaper_themes/default/{period}.*
     run_on_exit: feh --bg-fill src/solid_black_background.jpeg
 
-    # The option "load_conf_on_period_change: section file_path {period}" does
+    # The option "import_section_on_period_change: section file_path {period}" does
     # the following after each "timer" period change:
-    #     - Find the dosini file located at "file_path"
-    #     - Retrieve the values defined in the section named the same as the current period
-    #     - Load the values into this configuration under the section named "section"
-    #     - Recompile all templates with proper substitution of ${ast:section:value}
+    #     - Find the yaml formatted file located at "file_path".
+    #     - Retrieve the values defined in the section named the same as the 
+    #       current period, e.g. night.
+    #     - Load the entire section into this configuration.
+    #     - Recompile all templates with new values for ${ast:section:*}
     #
     # Here we change the colors of other templates based on the current wallpaper
-    load_conf_on_period_change: colors wallpaper_themes/default/colors.yaml {period}
+    import_section_on_period_change: colors wallpaper_themes/default/colors.yaml {period}
 
 
 module/conky-time:
