Add setup.py setuptools script for pypi publishing

--- a/src/requirements.in
+++ b/src/requirements.in
@@ -24,3 +24,9 @@ pyyaml
 
 # For template rendering
 Jinja2
+
+# For distribution and installation of this application
+setuptools
+
+# For binary distribution for faster installation times
+wheel
