--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -25,3 +25,7 @@ pytz==2017.3              # via astral
 pyyaml==3.12
 six==1.11.0               # via freezegun, pip-tools, pytest, python-dateutil
 typed-ast==1.1.0          # via mypy
+wheel==0.30.0
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
