--- a/astrality/config/wallpaper_themes/default/colors.yaml
+++ b/astrality/config/wallpaper_themes/default/colors.yaml
@@ -1,19 +1,19 @@
-sunrise:
+context/sunrise:
     1: FC6F42
     2: DB4E38
 
-morning:
+context/morning:
     1: 5BA276
     2: 76B087
 
-afternoon:
+context/afternoon:
     1: FC6F42
     2: DB4E38
 
-sunset:
+context/sunset:
     2: 9B3A1A
     1: FEE676
 
-night:
+context/night:
     1: CACCFD
     2: 3F72E8
