--- a/requirements.txt
+++ b/requirements.txt
@@ -4,27 +4,50 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+alabaster==0.7.10         # via sphinx
+argh==0.26.2              # via sphinx-autobuild, watchdog
 astral==1.4
 attrs==17.4.0             # via pytest
+babel==2.5.3              # via sphinx
+certifi==2018.1.18        # via requests
+chardet==3.0.4            # via requests
 click==6.7                # via pip-tools
+docutils==0.14            # via sphinx
 first==2.0.1              # via pip-tools
 freezegun==0.3.9          # via pytest-freezegun
+idna==2.6                 # via requests
+imagesize==0.7.1          # via sphinx
 jinja2==2.10
+livereload==2.5.1         # via sphinx-autobuild
 markupsafe==1.0           # via jinja2
 mypy==0.560
+packaging==16.8           # via sphinx
+pathtools==0.1.2          # via sphinx-autobuild, watchdog
 pip-tools==1.11.0
 pluggy==0.6.0             # via pytest
+port-for==0.3.1           # via sphinx-autobuild
 psutil==5.4.3             # via mypy
 py==1.5.2                 # via pytest
+pygments==2.2.0           # via sphinx
+pyparsing==2.2.0          # via packaging
 pytest-env==0.6.2
 pytest-freezegun==0.2.0
 pytest-mypy==0.3.0
 pytest==3.3.2
 python-dateutil==2.6.1    # via freezegun
-pytz==2017.3              # via astral
+pytz==2017.3              # via astral, babel
 pyyaml==3.12
-six==1.11.0               # via freezegun, pip-tools, pytest, python-dateutil
+requests==2.18.4          # via sphinx
+six==1.11.0               # via freezegun, livereload, packaging, pip-tools, pytest, python-dateutil, sphinx
+snowballstemmer==1.2.1    # via sphinx
+sphinx-autobuild==0.7.1
+sphinx-rtd-theme==0.2.4
+sphinx==1.7.0
+sphinxcontrib-websupport==1.0.1  # via sphinx
+tornado==4.5.3            # via livereload, sphinx-autobuild
 typed-ast==1.1.0          # via mypy
+urllib3==1.22             # via requests
+watchdog==0.8.3
 wheel==0.30.0
 
 # The following packages are considered to be unsafe in a requirements file:
