--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 script:
-  - coverage run --source='.' -m py.test -vv --runslow
+  - coverage run --rcfile=.coveragerc --source='.' -m py.test -vv --runslow
   - coverage report -m
 after_success:
   - coveralls
