--- a/astrality/config/astrality.yaml
+++ b/astrality/config/astrality.yaml
@@ -11,10 +11,15 @@ settings/astrality:
     # You can set the number of seconds Astrality waits for the shell commands to exit.
     run_timeout: 0
 
+    # Modules can require successfull shell commands (non-zero exit codes) in order
+    # to be enabled. You can specify the timeout for such checks, given in seconds.
+    requires_timeout: 1
+
 
 module/wallpaper:
     # A module for changing your wallpaper based on the suns position in the sky.
     enabled: true
+    requires: command -v feh
 
     timer:
         # The solar timer provides the following periods:
@@ -49,6 +54,7 @@ module/wallpaper:
 
 module/conky:
     enabled: true
+    requires: command -v conky
 
     templates:
         time:
